--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>无畏契约官方外挂</title>
+    <title>看什么看，标题你看个蛋啊</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <h1 style="font-size:60px;color:yellow"><a href="https://ys.mihoyo.com">点击此处下载</a>a</h1>
+    <h1>世界上最好玩的fps游戏排行榜</h1>
+    <ol style="font_size:70px;color:red">
+        <li>无畏契约</li>
+        <li>瓦罗兰特</li>
+        <li>特战英豪</li>
+        <li>valorant</li>
+        <li>想不到了</li>
+    </ol>
+    <p style="font-size:60px;color:yellow"><a href="https://ys.mihoyo.com">点击此处下载</a></p>
     <script src="./index.js"></script>
 </body>
 
