--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>看什么看，标题你看个蛋啊</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" type="text/css" />
 </head>
 
 <body>
     <h1>世界上最好玩的fps游戏排行榜</h1>
-    <ol style="font_size:70px;color:red">
+    <ol style="color:red">
         <li>无畏契约</li>
         <li>瓦罗兰特</li>
         <li>特战英豪</li>
