--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>看什么看，标题你看个蛋啊</title>
+    <title>虽然我没想好做啥但是保持更新</title>
     <link rel="stylesheet" href="./index.css" type="text/css" />
 </head>
 
 <body>
-    <h1>世界上最好玩的fps游戏排行榜</h1>
+    <h1>夜之棋的游戏库</h1>
     <ol style="color:red">
-        <li>无畏契约</li>
-        <li>瓦罗兰特</li>
-        <li>特战英豪</li>
-        <li>valorant</li>
+        <li><a href="https://val.qq.com/main.html">无畏契约</a></li>
+        <li><a href="https://ys.mihoyo.com">原神</a></li>
+        <li><a href="https://sr.mihoyo.com">崩坏:星穹铁道</a></li>
+        <li><a href="https://zzz.mihoyo.com">绝区零</a></li>
         <li>想不到了</li>
     </ol>
     <p style="font-size:60px;color:yellow"><a href="https://ys.mihoyo.com">点击此处下载</a></p>
