--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="https://mc.kurogames.com/" target="_blank">鸣潮</a></li>
     </ul>
     <form  method="post" action="save.php">
-        <label>有什么对本网页的建议吗</label>
+        <label>有什么对本网页的建议吗<div class="b1">(最好没有，有也最好憋着)</div></label>
         <textarea>在这里输入内容...</textarea>
         <input type="submit" value="确定" name="submit" />
         <input type="reset" value="重置" name="reset" />
