--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YEZHIQIのWeb</title>
-    <link rel="stylesheet" href="./_html/code/index.css" type="text/css" />
-    <link rel="shortcut icon" href="./_html/resource/33.ico" />
+    <link rel="stylesheet" href="../_html/code/index.css" type="text/css" />
+    <link rel="shortcut icon" href="../_html/resource/33.ico" />
     <music>
         <audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" id="不眠之夜">
-            <source src="./_html/resource/张杰,HOYO-MiX - 不眠之夜.mp3" type="audio/mp3" />
+            <source src="../_html/resource/张杰,HOYO-MiX - 不眠之夜.mp3" type="audio/mp3" />
         </audio>
     </music>
 </head>
@@ -17,9 +17,9 @@
 <body>
     <div id="biaotou">
     <h1>夜之棋的前端实验室</h1>
-    <a href="https://yezhiqi-cc.github.io/xiaowo/" target="夜之棋自创logo"><img src="./_html/resource/11.jpg" id="logo"></a>
-    <input type="image" src="./_html/resource/99.png" id="yyan" onclick="toggleAudio()"/>
-    <script src="./_html/code/index.js"></script>
+    <a href="https://yezhiqi-cc.github.io/xiaowo/" target="夜之棋自创logo"><img src="../_html/resource/11.jpg" id="logo"></a>
+    <input type="image" src="../_html/resource/99.png" id="yyan" onclick="toggleAudio()"/>
+    <script src="../_html/code/index.js"></script>
     </div>
     <hr/>
     <h2>前面的区域以后再来探索吧</h2>
