--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>夜之棋的前端实验室</h1>
     <a href="https://yezhiqi-cc.github.io/xiaowo/" target="夜之棋自创logo"><img src="./resource/11.jpg" id="logo"></a>
     <input type="image" src="./resource/99.png" id="yyan" onclick="toggleAudio()"/>
-    <script src="./code/index.js"></script>
+    <script src="./index.js"></script>
     </div>
     <hr/>
     <h2>前面的区域以后再来探索吧</h2>
