--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a class="side" href="#7/6">7月6日</a>
         <a class="side" href="#7/7">7月7日</a>
         <a class="side" href="#7/8">7月8日</a>
+        <a class="side" href="#7/9">7月9日</a>
         <p class="end">前面的区域，以后再来探索吧</p>
     </aside>
     <div class="btn">
@@ -114,7 +115,7 @@
                 </p>
                 
             </div>
-            <button id="toggleButton" class="toggle-button">展开阅读全文</button>
+            <button id="toggleButton1" class="toggle-button">展开阅读全文</button>
             <br /><br />
             <maodian id="7/8"/>
             <div class="card">
@@ -126,14 +127,33 @@
                 </p>
                 <p style="text-indent:2em">今天感觉自己任督二脉打通了啊，做起东西起来顺心如意，你看这个侧边栏多帅，效果非常好啊我感觉，而且用的参数是vmax，带有一定的兼容性，哎，到底还要多久才能把响应式设计学了，我也想在手机上看我的web。。。</p>
                 <p style="text-indent:2em;color:rgba(230, 12, 164, 0.788)">知识点，当使用a链接标签时，如果href属性里面是某个元素的id，则当点击文本时将跳转到id元素所在，一般是置顶，所以最好设置一个空标签用作锚点，也便于设置margin看起来效果更好一点</p>
-                <p style="text-indent:2em">明天加油吧那个代码的笔记模块做了，今天优化的都是想让画面更好看点，看着好看就有自豪感，就有动力继续卷。</p>
+                <p style="text-indent:2em">明天加油把那个代码的笔记模块做了，今天优化的都是想让画面更好看点，看着好看就有自豪感，就有动力继续卷。接下来可能准备做多几个音乐，然后做多几个板块看看。</p>
+                <p style="text-indent:2em">怎么感觉那个慕课网的js还是太浅了，大一上学了C和一部分C++，大一下学了java，但是js这个部分我感觉还是不太一样，真要面向实际应用的程序还是和那种学校考试1+1=2区别很大的。</p>
+                <p style="text-indent:2em">不过慕课网对启蒙效果还是很好的，至少入门上手完全没问题，可能实际核心的部分还是要多打代码，多完成一些成果吧，如果我的网页有帮到某人进入前端，我也希望你能自己动手做一个网页，和我一样，看不懂没事，多尝试，多修改，不懂的地方以后有再一次用到的地方的时候，就会突然想起来当时好像有过这个代码，总之不要想的太困难，世上无难事。</p>
             </div>
-
+            <br /><br />
+            <maodian id="7/9"/>
+            <div class="card" id="c2">
+                <h2 class="biaoti">第一次任务</h2><br />
+                <hr />
+                <h4 class="qita">2024 年 7 月 9日</h4>
+                <p style="text-indent:2em">
+                    今天实验室装修，刚去坐下来就回来了，油电服，就当今天给自己休个假吧，做点慕课先，其实我感觉慕课只是一个引路人，真正要用到一些东西还是得CSDN和MDN，强烈推荐MDN，做的非常好，而有些具体的功能区和功能元素也可以在CSDN找，总之互联网永远是你的第一信息来源。
+                </p>
+                <p style="text-indent:2em">下午的时候迎来了实验室第一个作业，copy学习通的登录界面，难度还好就是兼容性还是不行，本来在这边看的还行，然后换到浏览器里面又变形，然后换笔记本又变形，可能这方面确实该加强一下，过几天恶补一下。</p>
+                <p style="text-indent:2em">不管别人怎么样但是这第一个作业确实给我打爽了，学以致用的快乐，而且完成度确实很高，可能没学过的人应该不懂我有多膨胀，前端真是有意思，是我目前为止觉得最有意思的编程了，希望我能一直保持这份兴趣。</p>
+                <p style="text-indent:2em">第一次的作业是关于一个学习通登录界面的模拟，其实就是几个盒子模型的嵌套，基本上那一节课程的东西多多少少都用上了，也算一个很好的复习内容了</p>
+                <p style="text-indent:2em;color:rgba(230, 12, 164, 0.788)">知识点：::placeholder这个伪类真的刷新我的认知，修改交互表格内字体样式不能直接修改，还有就是，学到了一个很好用的，box-shadow，和那个text-shadow:有异曲同工之妙，做笔记干嘛，快愣着啊！</p>
+                <p style="text-indent:2em">下面是第一次任务的效果图，我个人还是很满意的ovo</p>
+                <br/>
+                <img src="./re/photo/1cc.png" title="第一次前端任务" id="1cc" class="photo"/>
+            </div>
+            <button id="toggleButton2" class="toggle-button">展开阅读全文</button>
         </div>
 
 
     </div>
-   <!--优化方向：初步计划按时间引索，代码笔记模块，黑背景的卡片，做个音量调节吧,多放几首歌--> 
+   <!--优化方向：初步计划按时间引索，代码笔记模块，黑背景的卡片，,多放几首歌--> 
     
     <br /><br />
     <footer>
